modules/gdscript/tests/scripts/parser/errors/if_features_functions_with_different_signatures_1.gd
func _test():
	pass

@if_features()
func _func(a: int, b: String) -> Node:
	pass

@if_features()
func _func(a: float, b: String) -> Node:
	pass
